--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "element-ui": "^2.3.6",
+    "jquery": "^3.6.1",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "summernote": "0.8.18",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
@@ -15,6 +21,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "vue-cli-plugin-element-ui": "~1.1.4",
     "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
